deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ame-events-server-dev-deployment
  namespace: ame-events-server-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ame-events-server-dev
  template:
    metadata:
      labels:
        app: ame-events-server-dev
    spec:
      containers:
      - name: ame-events-server-dev-container
        image: ghcr.io/jcuyler89/ame-event-management-server:sha256-3f0c659689102aaf0d77127ffd0fbe833e78e3c0194425aa7900d3b1619e1abe.sig
        ports:
        - containerPort: 5050
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      imagePullSecrets:                 # Add this section
      - name: ghcr-secret                # Referencing the created secret
---
apiVersion: v1
kind: Service
metadata:
  name: ame-events-server-dev-service
  namespace: ame-events-server-dev
spec:
  type: ClusterIP
  selector:
    app: ame-events-server-dev
  ports:
  - protocol: TCP
    port: 80  # The port exposed by the service (externally accessible inside the cluster)
    targetPort: 5050  # The port the container listens on
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ame-events-server-dev-ingress
  namespace: ame-events-server-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: eventsapi.dev.cluster.appliedmedical.eu
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ame-events-server-dev-service
                port:
                  number: 80  # The port exposed by the service
  tls:
    - hosts:
      - eventsapi.dev.cluster.appliedmedical.eu
      secretName: tls-secret-ame-events-server-dev
